--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
 # Google Cloud dependencies
 google-cloud-aiplatform>=1.38.0
-google-cloud-alloydb-connector>=1.0.0
-cloud-sql-python-connector[pg8000]>=1.5.0
 google-auth>=2.23.0
 google-auth-oauthlib>=1.1.0
 
-# Database
+# Database (via AlloyDB Auth Proxy)
 pg8000>=1.30.0
 
 # Configuration
