--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,17 @@
 GCP_PROJECT_ID=your-gcp-project-id
 GCP_SERVICE_ACCOUNT_JSON=path/to/service-account.json
 
-# AlloyDB Configuration (uses IAM authentication)
+# AlloyDB Configuration (uses IAM authentication via Auth Proxy)
 ALLOYDB_INSTANCE=your-alloydb-instance
 ALLOYDB_CLUSTER=your-alloydb-cluster
 ALLOYDB_REGION=your-region
 ALLOYDB_DATABASE=your-database-name
 # For IAM auth, use your service account email (e.g., my-sa@project-id.iam.gserviceaccount.com)
 ALLOYDB_USER=your-service-account-email
+
+# AlloyDB Auth Proxy Configuration (optional - defaults shown)
+ALLOYDB_PROXY_HOST=localhost
+ALLOYDB_PROXY_PORT=5432
 
 # Vertex AI Configuration
 VERTEX_AI_LOCATION=us-central1
